[Widget] Create widget

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,23 @@
         android:exported="true"
         android:permission="android.permission.BIND_JOB_SERVICE"
         />
+
+    <service
+        android:name=".widget.StockWidgetRemoteViewsService"
+        android:permission="android.permission.BIND_REMOTEVIEWS"
+        />
+
+    <receiver android:name=".widget.StockWidgetProvider">
+      <intent-filter>
+        <action android:name="android.appwidget.action.APPWIDGET_UPDATE"/>
+        <action android:name="com.udacity.stockhawk.ACTION_DATA_UPDATED"/>
+      </intent-filter>
+
+      <meta-data
+          android:name="android.appwidget.provider"
+          android:resource="@xml/widget_stock"
+          />
+    </receiver>
   </application>
 
 </manifest>
